--- a/.github/workflows/post-medium.yaml
+++ b/.github/workflows/post-medium.yaml
@@ -20,6 +20,8 @@ jobs:
       # https://github.com/actions/checkout/releases/tag/v2.4.0 相当
       - uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579
       - run: |
+          apt update -y
+          apt install -y git
           files=$(git diff --name-only origin/main origin/${GITHUB_HEAD_REF} | grep README.md)
           for filepath in "$files"
           do
