--- a/.github/workflows/post-medium.yaml
+++ b/.github/workflows/post-medium.yaml
@@ -17,14 +17,14 @@ jobs:
     container:
       image: ghcr.io/matsubara0507/mdium
     steps:
+      - run: |
+          apt update -y
+          apt install -y git
       # https://github.com/actions/checkout/releases/tag/v2.4.0 相当
       - uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579
         with:
           fetch-depth: 0
       - run: |
-          apt update -y
-          apt install -y git
-          cd medium
           git branch
           files=$(git diff --name-only main ${GITHUB_HEAD_REF} | grep README.md)
           for filepath in "$filegs"
