--- a/.github/workflows/post-medium.yaml
+++ b/.github/workflows/post-medium.yaml
@@ -17,9 +17,9 @@ jobs:
     container:
       image: ghcr.io/matsubara0507/mdium
     steps:
-      # - run: |
-      #     apt update -y
-      #     apt install -y git
+      - run: |
+          apt update -y
+          apt install -y git
       # https://github.com/actions/checkout/releases/tag/v2.4.0 相当
       - uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579
         with:
