--- a/.github/workflows/post-medium.yaml
+++ b/.github/workflows/post-medium.yaml
@@ -30,7 +30,7 @@ jobs:
           sed -i "s@images@https://raw.githubusercontent.com/lirlia/medium/main/articles/template/images@g" "${ARTICLE_PATH}/README.md"
 
           opts=(
-            --title="\"$(cat ${ARTICLE_PATH}/title)\""
+            --title="$(cat ${ARTICLE_PATH}/title)"
             --gist="medium-snippet-"
             --org="$PUBLICATION_ID"
             --verbose
