--- a/.github/workflows/post-medium.yaml
+++ b/.github/workflows/post-medium.yaml
@@ -37,3 +37,12 @@ jobs:
           )
           # https://github.com/matsubara0507/mdium
           mdium "${ARTICLE_PATH}/README.md" ${opts[@]}
+
+      # https://github.com/EndBug/add-and-commit/releases/tag/v8.0.2
+      - uses: EndBug/add-and-commit@72e246094f1af94def5a07467cd789c503ae8be0
+        with:
+          committer_name: github-actions[bot]
+          committer_email: 41898282+github-actions[bot]@users.noreply.github.com
+          default_author: github_actor
+          message: 'chore: update image url by github action'
+          push: true
