--- a/.github/workflows/post-medium.yaml
+++ b/.github/workflows/post-medium.yaml
@@ -38,6 +38,21 @@ jobs:
           # https://github.com/matsubara0507/mdium
           mdium "${ARTICLE_PATH}/README.md" ${opts[@]}
 
+  push-changes:
+    name: push-changes
+    runs-on: ubuntu-20.04
+    steps:
+      # https://github.com/actions/checkout/releases/tag/v2.4.0 相当
+      - uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579
+      - name: change-url
+        shell: bash
+        run: |
+
+          set -x
+
+          # image url を更新
+          sed -i "s@images@https://raw.githubusercontent.com/lirlia/medium/main/${ARTICLE_PATH}/images@g" "${ARTICLE_PATH}/README.md"
+
       # https://github.com/EndBug/add-and-commit/releases/tag/v8.0.2
       - uses: EndBug/add-and-commit@72e246094f1af94def5a07467cd789c503ae8be0
         with:
