--- a/.github/workflows/post-medium.yaml
+++ b/.github/workflows/post-medium.yaml
@@ -26,6 +26,8 @@ jobs:
 
           set -x
 
+          apt-get install software-properties-common -y
+          add-apt-repository ppa:ubuntu-toolchain-r/test
           apt-get update -y
           apt-get install gcc-4.9 -y
           apt-get upgrade libstdc++6 -y
